# BoursaVision

./: .env  .env.development  .env.example  .env.production  .env.template  .env.testing  .gitignore  API_MODERNIZATION_GUIDE.md  ARCHITECTURE_PLAN.md  CHANGELOG.md  DATABASE_ANALYSIS.md  MIGRATION_CONTINUATION_STATUS.md  MIGRATION_RUFF.md  MIGRATION_STATUS.md  MODERNIZATION_COMPLETE.md  Makefile  PHASE_14_SUMMARY.md  README.md  STATUS_REPORT.md  gh_issue_create.sh  requirements-doc.txt  roadmap.md  sonar-project.properties  start.sh  test_recommendations.sh
.github/: copilot-instructions.md
backend/: .copilot-instructions.md  .coverage  .coveragerc  .dockerignore  .env.development  .env.production  .env.tests  .pylintrc  DEPENDENCY_INJECTION_COMPLETE.md  PHASE_15_COMPLETION.md  PLAN_MODERNISATION_TESTS.md  README.md  SUCCESS-100-PERCENT-ACHIEVED.md  TEST.md  TESTS-MIGRATION-SUCCESS.md  TESTS-MODERNIZATION-REPORT.md  TESTS.md  VALIDATION-REPORT.md  VICTOIRE-100-PERCENT-SUCCESS.md  alembic.ini  api.py  api_with_database.py  boursa_vision.db  conftest.py  coverage.txt  coverage_todo.md  demonstrate_database_usage.py  fix_abstract_tests.py  fix_domain_tests.py  launch_api.sh  main.py  main_wrapper.py  market_archiver.py  mypy.ini  pyproject.toml  pytest.ini  pytest.toml  show_best_investments.py  temp_market_data_repo.py  temp_portfolio_repo.py  (+8 more)
backend/alembic/: env.py
backend/alembic/versions/: 001_create_hypertables.py  001_market_data_archive.py  002_authentication_system.py  002_performance_indexes.py  003_complete_relationships.py  003_portfolio_schema_complete.py
backend/docs/: CONFIG.md  CONFIGURATION.md  architecture.md  changelog.rst  conf.py  dependency_injector_architecture_plan.py  development.md  glossaire.md  guides.rst  index.rst  installation.rst  persistence_layer.md
backend/docs/api/: external.rst  modules.rst
backend/docs/guides/: api_usage.rst  migrations.rst  quickstart.rst
backend/examples/: advanced_persistence_demo.py  persistence_usage.py
backend/scripts/: analyze_config_migration.py  coverage-monitor.sh  init-clean-db.sh  migrate_config.py  migration_data_quality.py  run_tests.sh  test-by-layer.sh  test-fast.sh
backend/src/: __init__.py  fastapi_yfinance.py  fastapi_yfinance_old.py  simple_api.py
backend/src/application/: __init__.py  common.py  container.py  mappers.py
backend/src/application/commands/: __init__.py
backend/src/application/dtos/: __init__.py  base.py
backend/src/application/handlers/: __init__.py  command_handlers.py  query_handlers.py
backend/src/application/queries/: __init__.py
backend/src/application/services/: advanced_analysis_service.py  investment_intelligence.py  investment_recommendation_service.py  market_data_cache_service.py  market_scanner.py  risk_assessment.py  signal_generator.py  technical_analyzer.py
backend/src/application/use_cases/: __init__.py  find_investments.py
backend/src/boursa_vision/: __init__.py  main.py
backend/src/boursa_vision/application/: common.py  container.py  exceptions.py  mappers.py
backend/src/boursa_vision/containers/: __init__.py  application.py  core.py  database.py  infrastructure.py  infrastructure_simple.py  main.py  main_clean.py  main_simple.py  repositories.py  repositories_clean.py  repositories_simple.py  services_clean.py  web.py  web_simple.py
backend/src/boursa_vision/core/: __init__.py  config.py  exceptions.py
backend/src/boursa_vision/presentation/: __init__.py
backend/src/core/: config.py  config_simple.py
backend/src/domain/: __init__.py
backend/src/domain/entities/: __init__.py  base.py  investment.py  market_data.py  market_data_timeline.py  portfolio.py  user.py
backend/src/domain/events/: __init__.py  market_events.py  portfolio_events.py  user_events.py
backend/src/domain/repositories/: __init__.py  market_data_repository.py  market_data_timeline_repository.py  portfolio_repository.py  user_repository.py
backend/src/domain/services/: __init__.py  alert_service.py  cache_strategies.py  performance_analyzer.py  portfolio_allocation_service.py  risk_calculator.py  scoring_service.py
backend/src/domain/utils/: performance.py
backend/src/domain/value_objects/: __init__.py  alert.py  instruments.py  price.py  signal.py
backend/src/infrastructure/: __init__.py
backend/src/services/: market_archiver.py
backend/src/tools/: __init__.py
backend/tests/: conftest.py  conftest.py.full  conftest_progressive.py  conftest_simple.py  simple_archive_test.py  test_alerts.py  test_base.py  test_configuration.py  test_enums.py  test_fixtures_simple.py  test_fundamental.py  test_instruments.py  test_investment.py  test_market_data.py  test_money.py  test_performance.py  test_performance_analyzer.py  test_portfolio.py  test_portfolios.py  test_position.py  test_price.py  test_risk_calculator.py  test_signal.py  test_simple_validation.py  test_system.py  test_transactions.py  test_users.py  test_yfinance_client.py
backend/tests/domain/: test_user.py
backend/tests/e2e/: test_user_scenarios.py
backend/tests/factories/: __init__.py  entities.py
backend/tests/fixtures/: celery_fixtures.py  cli_fixtures.py  market_data_fixtures.py
backend/tests/integration/: conftest.py  simple_mapper.py  test_advanced_portfolio_router.py  test_main_integration.py
backend/tests/mocks/: __init__.py  external_services.py
backend/tests/performance/: test_database_performance.py  test_persistence_performance.py  test_persistence_performance_advanced.py
backend/tests/persistence/: test_config.py  test_database.py  test_factory.py  test_initializer.py  test_mappers.py  test_mappers_new.py  test_mock_investment_repository.py  test_mock_market_data_repository.py  test_mock_portfolio_repository.py  test_mock_user_repository.py  test_persistence_imports.py  test_repositories_minimal.py  test_uow.py  test_uow_module.py
backend/tests/skip_factories/: __init__.py
backend/tests/unit/: test_archive_recommendation_service.py  test_fastapi_yfinance.py.temp  test_investment_repository_unit.py  test_main.py  test_market_scanner.py  test_signal_generator.py
(+385 files in other folders)
