[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "boursa-vision-backend"
version = "1.0.0"
description = "Trading Platform Backend - Clean Architecture avec Cache Intelligent"
authors = ["Quentin Sautiere <quentin@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
pydantic = {extras = ["dotenv", "email"], version = "^2.11.7"}
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.43"
alembic = "^1.13.0"
asyncpg = "^0.30.0"
redis = "^6.4.0"
celery = "^5.3.4"
yfinance = "^0.2.65"
pandas = "^2.3.2"
numpy = "^2.3.2"
aiohttp = "^3.9.1"
tenacity = "^9.1.2"
structlog = "^25.4.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
psycopg2-binary = "^2.9.10"
slowapi = "^0.1.9"
click = "^8.2.1"
pyjwt = "^2.10.1"
dependency-injector = "4.48.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
httpx = "^0.28.1"
ruff = "^0.12.4"
mypy = "^1.7.1"
pre-commit = "^4.3.0"

# Additional testing dependencies
pytest-mock = "^3.12.0"
pytest-factoryboy = "^2.6.0"
factory-boy = "^3.3.0"
faker = "^37.5.3"
freezegun = "^1.4.0"
pytest-xdist = "^3.8.0"
aiosqlite = "^0.21.0"

# Type stubs
pandas-stubs = "^2.3.0.250703"

[tool.ruff]
target-version = "py313"
line-length = 88
extend-exclude = [
    "migrations/",
    "alembic/",
    "__pycache__/",
    ".git/",
    ".pytest_cache/",
    ".coverage",
    "htmlcov/",
    "build/",
    "dist/",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
    "C901",  # too complex
    "E203",  # whitespace before ':'
    "E266",  # too many leading '#' for block comment
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "S101"]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["boursa_vision"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# [tool.pytest.ini_options]
# testpaths = ["tests"]
# python_files = ["test_*.py"]
# python_classes = ["Test*"]
# python_functions = ["test_*"]
# addopts = "-v --cov=src --cov-report=term-missing"
# asyncio_mode = "auto"
